Fix host, improve layout to prevent avatar jumping while loading, decrease animation delays to improve responsiveness

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -9,7 +9,7 @@
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
-  animation-delay: 0.35s;
+  animation-delay: 0.1s;
 
   @include breakpoint($x-large) {
     max-width: $x-large;
@@ -112,7 +112,7 @@
   margin-bottom: 2em;
   @include clearfix;
   animation: intro 0.3s both;
-  animation-delay: 0.25s;
+  animation-delay: 0.05s;
 
   &--overlay {
     position: relative;
@@ -123,7 +123,7 @@
     background-repeat: no-repeat;
     background-position: center;
     animation: intro 0.3s both;
-    animation-delay: 0.25s;
+    animation-delay: 0.05s;
 
     a {
       color: #fff;
